# dynamixel_bilateral_controller

./: .gitignore  CMakeLists.txt  README.md
include/: cranex7_observer.hpp  dxl_const.hpp  dxl_handler.hpp  filters.hpp  observers.hpp
src/: bilateral_pd.cpp  bilateral_pdt.cpp  cranex7_bilateral.cpp  cranex7_observer.cpp  dxl_handler.cpp
test/: CMakeLists.txt  calc_parameter.ipynb
test/dynamixel/: CMakeLists.txt  control_regular_interval.cpp  cranex7_get_states.cpp  identify_system.cpp  measure_bulk_rw.cpp
